--- a/src/main/resources/templates/orderPages/orderList2.html
+++ b/src/main/resources/templates/orderPages/orderList2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>orderList</title>
     <meta charset="utf-8">
     <link rel="stylesheet" th:href="@{/css/starRating.css}" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,17 +23,20 @@
             <th>주문번호</th>
             <th>상품이름</th>
             <th>배송상태</th>
-            <th>후기작성</th>
+            <th>리뷰작성</th>
         </tr>
         <tr th:each="order: ${orderList}">
             <td th:text="${order.id}"></td>
-            <td th:text="${order.orderName}"></td>
+            <td><a th:href="@{/items(orderName=${order.orderName})}" th:text="${order.orderName}"></a></td>
             <td th:text="${order.orderStatus}"></td>
             <div th:if="${order.orderStatus == '배송완료'}">
-                <td>
+                <td th:if="${order.review} == '후기작성'">
                     <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal"
-                            th:data-id="${order.id}" th:onclick="modal([[${order.id}]])">후기작성
+                            th:data-id="${order.id}" th:onclick="modal([[${order.id}]])" id="btn">[[${order.review}]]
                     </button>
+                </td>
+                <td th:unless="${order.review} == '후기작성'">
+                   <input type="button" class="btn btn-secondary" disabled value="등록완료">
                 </td>
             </div>
         </tr>
@@ -45,7 +48,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">후기작성</h4>
+                <h4 class="modal-title">리뷰작성</h4>
             </div>
             <div class="modal-body">
                 <input type="hidden" name="orderId" class="body-contents" id="contents">
@@ -61,7 +64,8 @@
                 <script th:src="app.js"></script>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="commentWrite()">후기등록</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="commentWrite()">리뷰등록
+                </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeRE()">Close</button>
             </div>
         </div>
@@ -70,19 +74,19 @@
 </body>
 
 <script th:inline="javascript">
+    //Close
     const closeRE = () => {
         document.querySelector('input[name=commentContents]').value = "";
         document.querySelector('h1[name=starCount]').textContent = "0점";
         stars.forEach((star) => star.classList.remove("star__checked"));
     }
 
-
+    //후기 작성 버튼
     const modal = (order) => {
         console.log(order);
         const orderId = document.getElementById('contents');
         orderId.value = order;
     }
-
 
     // 별점
     let stars = document.querySelectorAll(".star");
@@ -94,13 +98,13 @@
         const i = [...stars].indexOf(e.target);
         if (i > -1) {
             stars[i].classList.add("star__checked");
-            rating.textContent = `${stars.length - i}`+"점";
+            rating.textContent = `${stars.length - i}` + "점";
         } else {
-            rating.textContent = `${0}`+"점";
+            rating.textContent = `${0}` + "점";
         }
     }
 
-    // 후기 쓰기
+    // 후기 등록
     const commentWrite = () => {
         const commentWriter = [[${session.member.memberName}]];
         const commentContents = document.querySelector('input[name=commentContents]').value;
@@ -109,7 +113,6 @@
         const regex = /[^0-9]/g;
         const result = starCount.replace(regex, "");
         const number = parseInt(result);
-
 
         $.ajax({
             type: "get",
@@ -127,6 +130,9 @@
                 document.querySelector('h1[name=starCount]').textContent = "0점";
                 stars.forEach((star) => star.classList.remove("star__checked"));
 
+                const btnElement = document.getElementById('btn');
+                btnElement.innerText = '등록완료';
+                btnElement.disabled = true;
 
 
             },
