--- a/src/main/resources/templates/orderPages/orderList.html
+++ b/src/main/resources/templates/orderPages/orderList.html
@@ -1,49 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" th:href="@{/css/starRating.css}" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="/static/js/bootstrap.bundle.js"></script>
-    <style>
-        /*화면 안뜨게 */
-        .modal-dialog {
-            display: none;
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-
-        /*.modal-content {*/
-        /*text-align:center;*/
-        /*width:100%;*/
-        /*max-width:400px;*/
-        /*border-radius:10px;*/
-        /*overflow:hidden;*/
-        /*background-color:#264db5;*/
-        /*box-shadow: 5px 10px 10px 1px rgba(0,0,0,.3);*/
-        /*}*/
-
-        /*.modal-body {*/
-        /*    position:fixed;*/
-        /*    top:0;*/
-        /*    left:0;*/
-        /*    width:100%;*/
-        /*    height:100%;*/
-        /*    background:rgba(0, 0, 0, 0.5);*/
-        /*    z-index:-1;*/
-        /*    word-break:break-word;*/
-        /*}*/
-
-    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<!--주문내역-->
+
+
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div th:if="${orderList == 'empty'}">
     <p>주문내역이 없습니다.</p>
@@ -62,71 +31,58 @@
             <td th:text="${order.orderStatus}"></td>
             <div th:if="${order.orderStatus == '배송완료'}">
                 <td>
-                    <button class="btn btn-primary" data-toggle="modal" data-target="#modalComment" id="modalOpen"> 후기 작성
+                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal"
+                            th:data-id="${order.id}" th:onclick="modal([[${order.id}]])">후기작성
                     </button>
                 </td>
-            </div>
-
-
-            <!--모달 영역-->
-            <div class="modal modal-comment position-static d-block py-5" tabindex="-1" role="dialog" id="modalComment">
-                <div class="modal-dialog" role="document" id="modal-dialog">
-                    <div class="modal-content rounded-4 shadow">
-                        <div class="modal-header p-5 pb-4 border-bottom-0">
-                            <h1 class="fw-bold " id="commentSave">후기 작성</h1>
-                            <button type="button" class="btn-close close-area" data-bs-dismiss="modal"
-                                    aria-label="Close" id="close">
-                            </button>
-                            <div class="modal-body p-5 pt-0">
-                                <input type="text" class="form-control rounded-3" th:id="'name'+${order.id}"
-                                       name="commentWriter" th:value="${session.member.userId}" readonly>
-                                <label th:for="'name'+${order.id}">작성자</label>
-                                <div class="form-floating mb-3">
-                                    <input type="text" class="form-control rounded-3 mt-3" th:id="'contents'+${order.id}"
-                                           name="commentContents" placeholder="내용">
-                                    <label th:for="'contents'+${order.id}">내용</label>
-                                </div>
-                                <div class="star-container">
-                                    <div class="star"></div>
-                                    <div class="star"></div>
-                                    <div class="star"></div>
-                                    <div class="star"></div>
-                                    <div class="star"></div>
-                                </div>
-                                <h1 class="rating" th:id="'star'+${order.id}" name="starCount">0</h1>
-                                <script th:src="app.js"></script>
-                                <button id="comment-write-btn" class="btn btn-secondary"
-                                        th:onclick="commentWrite([[${order}]])">작성완료
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </tr>
     </table>
 </div>
 
-
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">후기작성</h4>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" name="orderId" class="body-contents" id="contents">
+                <input type="text" class="form-control rounded-3 mt-3" name="commentContents" placeholder="내용">
+                <h1 class="rating" name="starCount">0점</h1>
+                <div class="star-container">
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                </div>
+                <script th:src="app.js"></script>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="commentWrite()">후기등록</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeRE()">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+
 <script th:inline="javascript">
-
-    $(".btn-modal").click(function(){
-        var data = $(this).data('id');
-        $("#contents.body-contents").val(data);
-        $("#text-contents.body-contents").html(data);
-    });
-
-    //모달 버튼
-    $('#modalOpen').on('click', function(){
-        $('#modalComment').modal('show');
-    });
-    document.getElementById("modalOpen").onclick = function() {
-        document.getElementById("modal-dialog").style.display="block";
+    const closeRE = () => {
+        document.querySelector('input[name=commentContents]').value = "";
+        document.querySelector('h1[name=starCount]').textContent = "0점";
+        stars.forEach((star) => star.classList.remove("star__checked"));
     }
-    document.getElementById("close").onclick = function() {
-        document.getElementById("modal-dialog").style.display="none";
+
+
+    const modal = (order) => {
+        console.log(order);
+        const orderId = document.getElementById('contents');
+        orderId.value = order;
     }
+
 
     // 별점
     let stars = document.querySelectorAll(".star");
@@ -138,23 +94,21 @@
         const i = [...stars].indexOf(e.target);
         if (i > -1) {
             stars[i].classList.add("star__checked");
-            rating.textContent = `${stars.length - i}`;
+            rating.textContent = `${stars.length - i}`+"점";
         } else {
-            rating.textContent = `${0}`;
+            rating.textContent = `${0}`+"점";
         }
     }
 
     // 후기 쓰기
-    const commentWrite = (order) => {
-        const commentWriter = document.getElementById("name" + order.id).value;
-        const commentContents = document.getElementById("contents" + order.id).value;
-        const starCount = document.getElementById("star" + order.id).textContent;
-        const id = order.id;
-
-        console.log(commentWriter);
-        console.log(commentContents);
-        console.log(starCount);
-        console.log(id);
+    const commentWrite = () => {
+        const commentWriter = [[${session.member.memberName}]];
+        const commentContents = document.querySelector('input[name=commentContents]').value;
+        const orderId = document.querySelector('input[name=orderId]').value;
+        const starCount = document.querySelector('h1[name=starCount]').textContent;
+        const regex = /[^0-9]/g;
+        const result = starCount.replace(regex, "");
+        const number = parseInt(result);
 
 
         $.ajax({
@@ -163,12 +117,18 @@
             data: {
                 commentWriter: commentWriter,
                 commentContents: commentContents,
-                orderId: id,
-                starCount: starCount
+                orderId: orderId,
+                starCount: number
             },
             dataType: "text",
             success: function (res) {
                 console.log("성공");
+                document.querySelector('input[name=commentContents]').value = "";
+                document.querySelector('h1[name=starCount]').textContent = "0점";
+                stars.forEach((star) => star.classList.remove("star__checked"));
+
+
+
             },
             error: function (err) {
                 console.log("실패");
@@ -176,4 +136,5 @@
         });
     }
 </script>
+
 </html>
