--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -3,67 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link rel="stylesheet" th:href="@{/css/save.css}">
-  <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-<!--ajax cdn-->
+<!--  <link rel="stylesheet" th:href="@{/css/save.css}">-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+  <!--ajax cdn-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-  <style>
-   .main{
-     position: absolute;
-     width: 1098px;
-     height: 909px;
-     left: 411px;
-     top: 85px;
-   }
-
-  </style>
-
+<!--  폰트-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+  <link rel="stylesheet" th:href="@{/style/save.css}" type="text/css">
 </head>
 <body>
 <th:block th:replace="commonPages/header :: header"></th:block>
+
 <div class="main">
 <header id="header">
-  <h1 class="tit">회원가입</h1>
+  <h1 class="tit mt-5">회원가입</h1>
 </header>
 <form name="join" action="/member/save" method="post" >
   <fieldset>
     <div class="id-container">
       <label for="uid">아이디</label>
-      <input type="text" class="width-450 form-control" name="UserId" id="uid">
-      <input type="button" name="checkId" onclick="check_id()" value="아이디 중복확인">
+      <input type="text" class="width-450 form-control" name="UserId" id="uid" placeholder="아이디를 입력해주세요">
+      <input type="button" class="btn btn-success mt-2" name="checkId" onclick="check_id()" value="아이디 중복확인">
       <span id="idError"></span>
     </div>
     <div class="password-container">
-      <label for="pwd">비밀번호</label>
-      <input type="password" class="width-450 form-control" name="memberPassword" id="pwd">
+      <label for="pwd" class="mt-4">비밀번호</label>
+      <input type="password" class="width-450 form-control" name="memberPassword" id="pwd" placeholder="비밀번호 입력 (문자, 숫자 포함 8~12자)">
       <span id="pwdError"></span>
-      <label for="rePwd">비밀번호 확인</label>
-      <input type="password" class="width-450 form-control" name="memberPassword2" id="rePwd" onblur="check_pwd()">
+      <label for="rePwd" class="mt-4">비밀번호 확인</label>
+      <input type="password" class="width-450 form-control" name="memberPassword2" id="rePwd" onblur="check_pwd()" placeholder="비밀번호 재입력">
       <span id="rePwdError"></span>
     </div>
     <div class=name-container>
-      <label for="uname">이름</label>
-      <input type="text" class="width-450 form-control" name="memberName" id="uname" onblur="check_name()">
+      <label for="uname" class="mt-4">이름</label>
+      <input type="text" class="width-450 form-control" name="memberName" id="uname" onblur="check_name()" placeholder="이름을 입력해주세요">
       <span id="nameError"></span>
       </span>
     </div>
 
     <div class=mobile-container>
-      <label for="memberMobile">전화번호</label>
-      <input type="text" class="width-450 form-control" name="memberMobile" id="memberMobile" onblur="check_mobile()">
+      <label for="memberMobile" class="mt-4">전화번호</label>
+      <input type="text" class="width-450 form-control" name="memberMobile" id="memberMobile" onblur="check_mobile()" placeholder="휴대폰 번호 입력 ('-' 제외 11자리 입력)">
       <span id="mobileError"></span>
     </div>
 
     <div class=email-container>
-      <label for="memberEmail">이메일</label>
-      <input type="text" class="width-450 form-control" name="memberEmail" id="memberEmail" onblur="check_email()">
+      <label for="memberEmail" class="mt-4">이메일</label>
+      <input type="text" class="width-450 form-control" name="memberEmail" id="memberEmail" onblur="check_email()"placeholder="이메일 주소 입력 (___@___ 형식으로 입력)">
       <span id="emailError"></span>
     </div>
 
 
     <div class="btn-container">
-      <button type="submit" id="joinBtn" class="width-half height-30 form-control form-group group btn-group btn btn-success" name="join">회원가입</button>
+      <button type="submit" id="joinBtn" class="width-half height-30 form-control form-group group btn-group btn btn-success mt-4" name="join">회원가입</button>
     </div>
   </fieldset>
 </form>
