--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -5,15 +5,21 @@
     <title>header</title>
     <script th:src="@{/js/axios.min.js}"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script th:src="@{/scripts/scripts.js}"></script>
     <script src="/static/js/bootstrap.bundle.js"></script>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/style/swiper.css}" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link th:href="@{https://fonts.googleapis.com/css?family=Nanum+Gothic}" rel="stylesheet" type="text/css"><!--폰트-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
+    <script src="/static/js/bootstrap.bundle.js"></script>
+<!--    swiper cdn-->
     <style>
         .aa {
             display: inline-block;
