--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width; initial-scale=1.0"/>
-    <title>GARDENING SHOP | gardening shop</title>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
-    <script src="/static/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
-    <script th:src="@{/scripts/scripts.js}"></script>
-    <link th:href="@{https://fonts.googleapis.com/css?family=Nanum+Gothic}" rel="stylesheet" type="text/css"><!--폰트-->
+    <!-- Swiper -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
+    <style>
+        html, body {
+            position: relative;
+            height: 100%;
+        }
 
+        body {
+            background: #eee;
+            margin: 0;
+            padding: 0;
+        }
+
+        .swiper-container {
+            width: 100%;
+            height: 100%;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
 <a href="#" id="top"><img th:src="@{img/top_btn.png}" alt="top_btn"></a> <!--top버튼-->
@@ -37,69 +50,49 @@
             <div id="what">
                 <h2>WHAT WE DO</h2>
                 <p>식물, 그들을 이해하고 아끼는 사람이 만듭니다. <br>
-                    안녕하세요 애견들의 행복한 입맛과 건강을 생각하는 “도그쿡”입니다. <br>
-                    항상 최선의 재료로 정성을 다하여 건강한 사료와 간식을
-                    만들도록 노력하겠습니다. <br> 무방부제,무첨가제! 수제간식이 더욱 보편화 되어 모든 반려견들이 건강한 간식을 먹도록<br>
-                    하는게 도그쿡의 목표입니다. <br>
-                    정직한재료,깨끗한조리시설로 인정받을 수 있는 수제간식 쇼핑몰이 되겠습니다.
+                    언제 어디서나 식물을 사랑하는 우리 집사님들을 위해 건강한 식물을 판매하는 “Gardening”입니다. <br>
+                    그늘에서도, 겨울에도 잘 자라는 식물!
+                    <br> 플랜테리어, 인테리어화분, 원스톱 식물플랫폼, 푸르다마켓, 공기정화식물, 반려식물, ... <br>
+                    Gardening 은 협력농장에서 직접보고 셀렉한 최상급 식물만을 판매합니다
                 </p>
             </div>
 
-            <img th:src="@{/img/prd3.png}">
+            <img th:src="@{/img/main2.jpg}">
 
         </article>
 
         <div id="intro_bg">
             <section>
-                <h2>PLANT PRODUCT</h2>
+                <h2>최신 상품</h2>
                 <div id="pdt">
-                    <ul>
-                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
-                            <p><img th:src="@{/img/new.png}" alt="new">
-                                진백나무 <br>
-                                <em>13,000원</em>
-                            </p>
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide" th:each="item: ${itemList}">
 
-                        </a>
-                        </li>
-                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
-                            <p><img th:src="@{/img/new.png}" alt="new">진백나무 <br>
-                                <em>5,900원</em>
-                            </p>
-                        </a>
-                        </li>
-                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
-                            <p>진백나무<br>
-                                <em>5,900원</em>
-                            </p>
-                        </a>
-                        </li>
-                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
-                            <p><img th:src="@{/img/new.png}" alt="new">진백나무<br>
-                                <em>5,900원</em>
-                            </p>
-                        </a>
-                        </li>
-                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
-                            <p><img th:src="@{/img/md_icon.png}" alt="추천">진백나무<br>
-                                <em>4,900원</em>
-                            </p>
-                        </a>
-                        </li>
-                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
-                            <p><img th:src="@{/img/md_icon.png}" alt="추천">진백나무<br>
-                                <em>5,900원</em>
-                            </p>
-                        </a>
-                        </li>
+                                    <li><a th:href="@{/item/(itemId=${item.id})}">
+                                        <img th:src="@{|/upload/${item.storedFileNameItem.get(0)}}" alt="" width="200"
+                                             height="150">
+                                        <p><img th:src="@{/img/new.png}" alt="new">
+                                        <p class="read"><a th:href="@{/item/(itemId=${item.id})}"
+                                                           th:text="${item.itemName}"></a>
+                                        </p>
+                                        <em th:text="${item.itemPrice}"></em>
+                                        </p>
+                                    </a>
+                                    </li>
 
-
-                    </ul>
+                            </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
                 </div>
             </section><!--px-->
         </div>
     </div>
     <!--e:section-->
+
 
     <!--s:footer-->
     <footer>
@@ -140,10 +133,29 @@
 
 </body>
 <script th:inline="javascript">
+
+
     const cart = () => {
         const form = document.querySelector('form');
         form.submit();
     }
+
+    var swiper = new Swiper('.swiper-container', {
+        spaceBetween: 5,
+        slidesPerView : '4', // 한 슬라이드에 보여줄 갯수
+        centeredSlides: true,    //센터모드
+        pagination: {
+            clickable: true,
+        },
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        }, loop : true,
+        autoHeight : true,
+        autoplay: {     //자동슬라이드 (false-비활성화)
+            delay: 1500},
+    });
+
 </script>
 </html>
 
