정보수정 전 비밀번호 체크

--- a/src/main/resources/templates/memberPages/memberPasswordCheck.html
+++ b/src/main/resources/templates/memberPages/memberPasswordCheck.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <title>passwordCheck</title>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!--  폰트-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <style>
+        *{
+            font-family: 'Jua', sans-serif;
+            font-family: 'Nanum Gothic', sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+
+        .main{
+            width: 400px;
+            height: 409px;
+            left: 411px;
+            top: 85px;
+            /*가운데 정렬 margin: auto*/
+            margin-top: 100px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        label{
+            margin-top: 20px;
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
+<div class="main">
 <div class="password-container">
     <form action="/member/password" method="get" name="passwordCheck"></form>
     <input type="hidden" name="id" th:value="${session.member.id}">
@@ -14,13 +40,18 @@
     <input type="hidden" name="memberEmail" th:value="${session.member.memberEmail}">
     <input type="hidden" name="memberName" th:value="${session.member.memberName}">
     <input type="hidden" name="memberMobile" th:value="${session.member.memberMobile}">
-  <label for="pwd">비밀번호</label>
-  <input type="password" class="width-450 form-control" name="memberPassword" id="pwd">
+  <div>
+    <label for="pwd">비밀번호</label>
+  <input type="password" class="width-450 form-control" name="memberPassword" id="pwd" placeholder="비밀번호를 입력하세요">
   <span id="pwdError"></span>
+  </div>
+    <div>
   <label for="repwd">비밀번호 확인</label>
-  <input type="password" class="width-450 form-control" name="memberPassword2" id="repwd" onblur="check_pwd()">
+  <input type="password" class="width-450 form-control" name="memberPassword2" id="repwd"  placeholder="비밀번호를 재입력하세요">
   <span id="rePwderror"></span>
-  <input type="submit" value="정보 수정하기">
+    </div>
+  <input type="submit" class="btn btn-success" style="width: 400px; margin-top: 20px;" onclick="check_pwd()" value="정보 수정하기">
+</div>
 </div>
 </body>
 <script>
@@ -31,8 +62,8 @@
       alert("비밀번호를 입력해주세요.");
     } else if (pwd != repwd) {
       alert("비밀번호가 일치하지 않습니다.");
-      document.getElementById("pwdError").innerHTML = "비밀번호가 일치하지 않습니다.";
-      document.getElementById("pwdError").style.color = "red";
+      // document.getElementById("pwdError").innerHTML = "비밀번호가 일치하지 않습니다.";
+      // document.getElementById("pwdError").style.color = "red";
     } else {
       document.passwordCheck.submit();
       location.href="/member/update";
