--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -51,7 +51,7 @@
 
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     <li><a class="dropdown-item" th:href="@{/order/list(userId=${session.member.userId})}">주문확인/배송조회</a></li>
-                                    <li><a class="dropdown-item" href="/member/myPage">내정보</a></li>
+                                    <li><a class="dropdown-item" href="/member/password">내정보</a></li>
                                 </ul>
                             </li>
                             <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>
