--- a/src/main/resources/templates/memberPages/memberUpdate.html
+++ b/src/main/resources/templates/memberPages/memberUpdate.html
@@ -4,52 +4,149 @@
     <meta charset="UTF-8">
     <title>update</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <!--ajax cdn-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!--  폰트-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
+  <style>
+    *{
+      font-family: 'Jua', sans-serif;
+      font-family: 'Nanum Gothic', sans-serif;
+      font-family: 'Noto Sans KR', sans-serif;
+    }
+    #update-form {
+      width: 400px;
+      height: 409px;
+      left: 411px;
+      top: 85px;
+      /*가운데 정렬 margin: auto*/
+      margin-top: 100px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    label{
+      margin-top: 20px;
+    }
+  </style>
 </head>
-<body>
-<style>
-  #update-form {
-    width: 800px;
-  }
-</style>
-</head>
-<body>
+
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container" id="update-form">
-  <form action="/member/update" method="post" name="updateForm">
+  <form action="/member/update" method="post" name="updateCheck">
     <input type="hidden" name="id" th:value="${session.member.id}">
-    아이디: <input type="text" name="userId" th:value="${session.member.userId}" class="form-control" readonly>
-    이메일: <input type="text" name="memberEmail" th:value="${session.member.memberEmail}" class="form-control">
-    변경 비밀번호: <input type="password" name="memberPasswordUpdate" id="pwdUpdate" class="form-control">
+
+    <label>아이디</label>
+    <input type="text" name="userId" th:value="${session.member.userId}" class="form-control" readonly>
+  <div>
+    <label for="pwdUpdate">변경 비밀번호</label>
+    <input type="password" name="memberPassword" id="pwdUpdate" class="form-control" placeholder="비밀번호 입력 (문자, 숫자 포함 8~12자)">
     <span id="pwdUpdateError"></span>
-    변경 비밀번호 확인: <input type="password" name="memberPasswordUpdateCheck" id="pwdUpdateCheck" onblur="updateCheck_pwd()" class="form-control">
+  </div>
+    <div>
+    <label for="rePwdUpdate">변경 비밀번호 확인</label>
+    <input type="password" name="memberPassword2" id="rePwdUpdate" onblur="updateCheck_pwd()" class="form-control" placeholder="비밀번호 재입력">
     <span id="reUpdatePwdError"></span>
-    이름: <input type="text" name="memberName" th:value="${session.member.memberName}" class="form-control">
-    전화번호: <input type="text" name="memberMobile" th:value="${session.member.memberMobile}" class="form-control">
-    주소: <input type="text" name="memberAddress" th:value="${session.member.memberAddress}" class="form-control">
-    <input type="button" value="수정" class="btn btn-warning" onclick="update()">
+    </div>
+    <div>
+    <label for="memberName" >이름</label>
+    <input type="text" name="memberName" id="memberName" th:value="${session.member.memberName}" onblur="updateCheck_name()" class="form-control">
+    <span id="nameUpdateError"></span>
+    </div>
+    <div>
+    <label for="memberMobile">전화번호</label>
+    <input type="text" name="memberMobile" id="memberMobile" th:value="${session.member.memberMobile}" onblur="updateCheck_mobile()" class="form-control">
+    <span id="mobileUpdateError"></span>
+    </div>
+    <div>
+    <label for="memberEmail">이메일</label>
+    <input type="text" name="memberEmail" id="memberEmail" th:value="${session.member.memberEmail}" onblur="updateCheck_email()" class="form-control">
+    <span id="emailUpdateError"></span>
+    </div>
+    <button type="submit" id="updateBtn" class="btn btn-success" name="updateCheck"  style="width: 385px; margin-top: 20px; text-align: center">정보 수정</button>
   </form>
 </div>
 </body>
 <script th:inline="javascript">
+
   const updateCheck_pwd = () => {
     const pwdUpdate = document.getElementById("pwdUpdate").value;
     const rePwdUpdate = document.getElementById("rePwdUpdate").value;
+    const exp = /^(?=.*[a-z])(?=.*\d)[A-Za-z\d]{8,12}$/;
+
     if (pwdUpdate == "") {
-      alert("새로운 비밀번호를 입력해주세요.");
+      $("#updateBtn").attr("disabled", "disabled");
+      const passwordCheck2 = document.getElementById("pwdUpdateError");
+      passwordCheck2.innerHTML="비밀번호를 입력해주세요";
+      passwordCheck2.style.color="red";
     } else if (pwdUpdate != rePwdUpdate) {
-      alert("비밀번호가 일치하지 않습니다.");
-      document.getElementById("pwdUpdateError").innerHTML = "비밀번호가 일치하지 않습니다.";
-      document.getElementById("pwdUpdateError").style.color = "red";
+      $("#updateBtn").attr("disabled", "disabled");
+      const passwordCheck2 = document.getElementById("pwdUpdateError");
+      passwordCheck2.innerHTML="비밀번호가 일치하지 않습니다.";
+      passwordCheck2.style.color= "red";
+    } else if(!document.updateCheck.memberPassword.value.match(exp)){
+      $("#updateBtn").attr("disabled", "disabled");
+      const passwordCheck2 =document.getElementById("pwdUpdateError");
+      passwordCheck2.innerHTML="영문 소문자와 숫자를 이용하여 8~12자 이내로 입력하세요";
+      passwordCheck2.style.color="red";
+      return false;
     } else {
       document.getElementById("pwdUpdateError").innerHTML = "비밀번호가 일치합니다.";
       document.getElementById("pwdUpdateError").style.color = "blue";
     }
   }
-  const update = () => {
-   document.updateForm.submit();
+  const updateCheck_name = () => {
+    const name = document.getElementById("memberName").value;
+    const nameCheck = document.getElementById("nameUpdateError");
+    if(document.updateCheck.memberName.value === ""){
+      $("#updateBtn").attr("disabled", "disabled");
+      nameCheck.innerHTML="이름을 입력해주세요";
+      nameCheck.style.color="red";
+      return false;
+    } else{
+      nameCheck.innerHTML="";
+    }
   }
+
+  const updateCheck_mobile = () => {
+    const mobile = document.getElementById("memberMobile").value;
+    const mobileCheck = document.getElementById("mobileUpdateError");
+    const regExp = /^\d{3}-\d{3,4}-\d{4}$/;
+    if (!regExp.test(mobile)) {
+      $("#updateBtn").attr("disabled", "disabled");
+      document.getElementById("memberMobile").value = "";
+      mobileCheck.innerHTML = "전화번호는 000-0000-0000 형식으로 입력해주세요."
+      mobileCheck.style.color = "red"
+    } else {
+      $("#updateBtn").removeAttr("disabled");
+      mobileCheck.innerHTML = ""
+    }
+  }
+
+  const updateCheck_email = () => {
+    const email = document.getElementById("memberEmail").value;
+    const emailCheck = document.getElementById("emailUpdateError");
+    const regExp = /\w+([-+.]\w+)*@\w+([-.]\w+)*\.[a-zA-Z]{2,4}$/;
+    if(email == ""){
+      $("#updateBtn").removeAttr("disabled");
+      emailCheck.innerHTML = ""
+    } else if (!regExp.test(email)) {
+      $("#updateBtn").attr("disabled", "disabled");
+      document.getElementById("memberEmail").value = "";
+      emailCheck.innerHTML = "이메일은 ____@____ 형식으로 입력해주세요."
+      emailCheck.style.color = "red"
+    } else {
+      $("#updateBtn").removeAttr("disabled");
+      emailCheck.innerHTML = ""
+    }
+  }
+  // const update = () => {
+  //  document.updateForm.submit();
+  // }
 
 </script>
 </body>
